# Finnkino-rs

./: Cargo.toml  README.md
finnkino-actix/: Cargo.toml
finnkino-actix/src/: main.rs
finnkino-rocket/: Cargo.toml
finnkino-rocket/src/: main.rs
libfinnkino-actix/: Cargo.toml
libfinnkino-actix/src/: lib.rs
libfinnkino-core/: Cargo.toml
libfinnkino-core/src/: finnkino.rs  json.rs  lib.rs
libfinnkino-rocket/: Cargo.toml
libfinnkino-rocket/src/: lib.rs
src/: finnino-actix.rs  finnkino-rocket.rs  finnkino.rs  jsonapi.rs  main.rs
src/finnkino/: actix.rs  mod.rs  rocket.rs
