[package]
name = "finnkino-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "finnkino-actix"
path = "src/finnino-actix.rs"
doctest = false
bench = true
doc = true

[dependencies]
serde = { version = "1.0.143", features = [ "derive" ] }
quick-xml = { version = "0.23.0", features = [ "serialize" ] }
actix = { version = "0.13.0" }
actix-web = { version = "4.1.0" }
actix-http = { version = "3.2.1" }
awc = { version = "3.0.0", features = ["openssl"] }
serde_json = { version = "1.0.83" }
futures = { version = "0.3.23" }
derive_builder = { version = "0.11.2" }

[dev-dependencies]
rusty-hook = { version = "^0.11.2" }
#rusty-hook = { version = "0.12.0", git = "https://github.com/swellaby/rusty-hook.git", branch = "master" }
wiremock = { version = "^0.5.14" }
tokio = { version = "^1.20.1" }
actix-rt = { version = "2.7.0" }
url = { version = "2.2.2" }
pretty_assertions = { version = "1.2.1" }

[package.metadata.commands]
fmt-check = "cargo fmt --all -- --check"
fmt-fix = "cargo fmt --all"
lint-check = "cargo clippy --all-targets --all-features --frozen -- -D warnings"
lint-fix = "cargo clippy --all-targets --all-features --frozen --fix -- -D warnings"

[profile.dev]
opt-level = 1
overflow-checks = false
debug = true
debug-assertions = true
lto = false
strip = false

[profile.release]
opt-level = 3
overflow-checks = true
debug = false
debug-assertions = false
lto = true
strip = true
