[workspace]
members = [
  "libfinnkino-core",
  "libfinnkino-actix",
  "libfinnkino-rocket",
  "finnkino-actix",
  "finnkino-rocket",
]

[profile.dev]
opt-level = 1
overflow-checks = false
debug = true
debug-assertions = true
lto = false
strip = false

[profile.release]
opt-level = 3
overflow-checks = true
debug = false
debug-assertions = false
lto = true
strip = true
